2006-07-11  Kim F. Storm  <storm@cua.dk>

	* dispnew.c (Fredisplay): Add FORCE argument to force redisplay	when
	input is available.  Fix test for redisplay_dont_pause non-nil.
	Specbind redisplay-dont-pause to t if FORCE non-nil.

2006-07-10  Chong Yidong  <cyd@stupidchicken.com>

	* puresize.h (BASE_PURESIZE): Increment to 1211000.

	* dispnew.c (Fredisplay): New function, equivalent to (sit-for 0).
	(Fsit_for): Function deleted.

	* keyboard.c (command_loop_1, Fexecute_extended_command): Call
	sit_for instead of Fsit_for.

	* minibuf.c (temp_echo_area_glyphs): Likewise.

2006-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (Fforward_comment): Revert the reversion.
	(back_comment, scan_lists): Also use EMACS_INT for buffer positions.

2006-07-09  John Paul Wallington  <jpw@pobox.com>

	* syntax.c (Fforward_comment): Revert previous change.

2006-07-09  Kim F. Storm  <storm@cua.dk>

	* window.c (Fforce_window_update): Doc fix.

2006-07-08  Stephen Gildea  <gildea@stop.mail-abuse.org>

	* fileio.c (do_auto_save_make_dir): Make the auto-save-list-file
	directory unreadable for better user privacy.

2006-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (Fforward_comment): Fix int-32 vs EMACS_INT-64 mixup.

	* lread.c (read_filtered_event): Remove `register' qualifier because it
	causes compilation problem with gcc-4.0.2-20051125 on amd64.
	(readevalloop): Remove unused var `bpos'.
	Yet another int/Lisp_Object mixup (YAILOM).

2006-07-07  Eli Zaretskii  <eliz@gnu.org>

	* keyboard.c (Fexecute_extended_command): Mention the argument
	PREFIXARG in the doc string.

2006-07-07  Kim F. Storm  <storm@cua.dk>

	* fringe.c (Fdefine_fringe_bitmap): Doc fix.

2006-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* insdel.c (prepare_to_modify_buffer): For an indirect buffer, do
	clash detection using the base buffer.

	* puresize.h (BASE_PURESIZE): Increment to 1210500.

2006-07-04  Kim F. Storm  <storm@cua.dk>
